<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/name"
            android:title="@string/name"
            app:showAsAction="always" />

        <item
            android:id="@+id/year"
            android:title="@string/year"
            app:showAsAction="always" />

        <item
            android:id="@+id/rating"
            android:title="@string/rating"
            app:showAsAction="always" />

        <item
            android:id="@+id/date_added"
            android:title="@string/dateAdded"
            app:showAsAction="always" />
    </group>
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/hideWatched"
            android:title="@string/hide_watched"
            app:showAsAction="always" />
        <item
            android:id="@+id/withResumePoint"
            android:title="@string/with_resume_point"
            app:showAsAction="always" />
    </group>
</menu>