<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/drawer_header_bg">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo_jumbo"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"/>


    <TextView
        android:id="@+id/about_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_content"
        android:layout_below="@+id/version"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/linkFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_via_email"
        android:layout_below="@+id/about_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"/>


    <TextView
        android:id="@+id/rateApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_app"
        android:layout_below="@+id/linkFeedback"
        android:textSize="20sp"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homepage"
        android:layout_below="@+id/rateApp"
        android:textSize="20sp"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"/>


    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_message"
        android:layout_alignParentBottom="true"
        android:textSize="16dp"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"/>

</RelativeLayout>
